<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_add_order"
            android:icon="@drawable/get_order"
            android:title="@string/menu_add_order" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/shop"
            android:title="@string/menu_clients" />
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/products"
            android:title="@string/menu_products" />
        <item
            android:id="@+id/nav_not_completed_orders"
            android:icon="@drawable/orders"
            android:title="@string/menu_need_complete" />
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/orders"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/expenses"
            android:title="@string/menu_expenses" />
        <item
            android:id="@+id/nav_report_orders"
            android:icon="@drawable/report"
            android:title="@string/reportOrders" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/report"
            android:title="@string/report" />
    </group>
</menu>