<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_add_order">

    <fragment
        android:id="@+id/nav_add_order"
        android:name="ordinary.frostsreport.ui.addOrder.AddOrderFragment"
        android:label="@string/menu_add_order"
        tools:layout="@layout/fragment_add_order" />

    <fragment
        android:id="@+id/nav_clients"
        android:name="ordinary.frostsreport.ui.clients.ClientsFragment"
        android:label="@string/menu_clients"
        tools:layout="@layout/fragment_clients" />

    <fragment
        android:id="@+id/nav_products"
        android:name="ordinary.frostsreport.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_products" />
    <fragment
        android:id="@+id/nav_orders"
        android:name="ordinary.frostsreport.ui.orders.OrdersFragment"
        android:label="@string/menu_orders"
        tools:layout="@layout/fragment_orders" />
</navigation>