<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/expenses"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReportExpenses">

    <TextView
        android:id="@+id/textStartDate"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:hint="От"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonStartDate"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="#FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/calendar"
        app:layout_constraintStart_toEndOf="@+id/textStartDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEndDate"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:hint="До"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/buttonEndDate"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonEndDate"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:background="#FFFFFF"
        android:scaleType="fitCenter"
        android:src="@drawable/calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/list_view_expenses_report"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/expenses_report_item">

    </ListView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="65dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:inputType="none"
        android:text="@string/menu_expenses"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/list_view_expenses_report" />

    <TextView
        android:id="@+id/report_spending_amount"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toBottomOf="@+id/list_view_expenses_report" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="75dp"
        android:layout_height="30dp"
        android:layout_marginTop="24dp"
        android:inputType="none"
        android:text="@string/amount_sale"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/report_spending_amount"
        app:layout_constraintTop_toBottomOf="@+id/list_view_expenses_report" />

    <TextView
        android:id="@+id/report_sale_amount"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/list_view_expenses_report" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="70dp"
        android:layout_height="30dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:inputType="none"
        android:text="@string/profit"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/report_amount"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/report_sale_amount" />

</androidx.constraintlayout.widget.ConstraintLayout>